--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,58 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8001:8001"
+      - "8002:8002"
     environment:
       - MODEL_EXPRESS_SERVER_PORT=8001
+      - MODEL_EXPRESS_SIDECAR_PORT=8002
+      - MODEL_EXPRESS_SIDECAR_ENDPOINT=http://127.0.0.1:8002
       - MODEL_EXPRESS_LOG_LEVEL=info
+      - MODEL_EXPRESS_CACHE_DIRECTORY=/app/cache
+      # S3 credentials for MinIO (optional, can be passed at runtime)
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-minioadmin}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-minioadmin}
+      - AWS_ENDPOINT_URL=http://minio:9000
+      - AWS_REGION=us-east-1
+    volumes:
+      - model-cache:/app/cache
+    depends_on:
+      - minio
     restart: unless-stopped
+
+  # MinIO for S3-compatible storage testing
+  minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    restart: unless-stopped
+
+  # MinIO client for bucket initialization (optional)
+  minio-init:
+    image: minio/mc:latest
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      sleep 5;
+      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc mb myminio/models --ignore-existing;
+      mc anonymous set download myminio/models;
+      echo 'MinIO initialization complete';
+      exit 0;
+      "
+
+volumes:
+  model-cache:
+  minio-data:
