feat: Implement pipelined RDMA transfers for improved bandwidth
Based on optimization strategies from:
- https://le.qun.ch/en/blog/2025/09/07/rl-weight-transfer/
- https://research.perplexity.ai/articles/weight-transfer-for-rl-post-training-in-under-2-seconds

Key changes:
- Add TransferTask and PipelineStats classes for task management
- Implement receive_from_source_pipelined() with concurrent batches
- Split transfers into configurable number of concurrent tasks
- Use non-blocking status polling instead of busy-wait
- Add pipeline statistics logging for performance analysis

New environment variables:
- MX_PIPELINE_ENABLED: Enable pipelined transfers (default: 1)
- MX_PIPELINE_BATCH_SIZE: Number of concurrent transfers (default: 8)
- MX_PIPELINE_POLL_INTERVAL_MS: Polling interval in ms (default: 1)

Expected improvement: 20-40% reduction in transfer time by overlapping
RDMA operations and reducing per-transfer overhead.

--- a/examples/p2p_transfer_k8s/vllm-target.yaml
+++ b/examples/p2p_transfer_k8s/vllm-target.yaml
@@ -72,6 +72,16 @@ spec:
             # Set to "1" for contiguous regions (experimental - see docs/CONTIGUOUS_CONTEXT.md)
             - name: MX_CONTIGUOUS_REG
               value: "0"
+            # OPTIMIZATION: Pipelined transfers - concurrent RDMA batches
+            # Enables multiple in-flight transfers for better bandwidth utilization
+            - name: MX_PIPELINE_ENABLED
+              value: "1"
+            # Number of concurrent transfer batches (default: 8)
+            - name: MX_PIPELINE_BATCH_SIZE
+              value: "8"
+            # Polling interval in ms for transfer status checks (default: 1)
+            - name: MX_PIPELINE_POLL_INTERVAL_MS
+              value: "1"
             # Logging (set to DEBUG for troubleshooting)
             - name: NIXL_LOG_LEVEL
               value: "INFO"
