feat: Add Kubernetes CRD backend for metadata storage
Introduces a pluggable metadata backend system allowing ModelExpress to
store P2P transfer metadata in either Redis (legacy) or Kubernetes CRDs
(new default).

Key changes:
- Add MetadataBackend trait with Redis and Kubernetes implementations
- ModelMetadata CRD stores worker info, ConfigMaps store tensor descriptors
- Backend selected via MX_METADATA_BACKEND env var (kubernetes|redis)
- Move deployment YAMLs to deploy/ subfolder
- Default YAMLs now use CRD backend (no Redis dependency)
- Add *-redis.yaml variants for Redis backend

New files:
- modelexpress_server/src/metadata_backend/{mod,redis,kubernetes}.rs
- modelexpress_server/src/k8s_types.rs
- modelexpress_client/python/modelexpress/metadata_client.py
- examples/p2p_transfer_k8s/deploy/crd-modelmetadata.yaml
- examples/p2p_transfer_k8s/deploy/rbac-modelmetadata.yaml

Signed-off-by: Kavin Krishnan <kavinkrishnan@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,12 @@ uuid = { version = "1.17", features = ["v4", "serde"] }
 thiserror = "2.0"
 redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 
+# Kubernetes client (kube-rs) for CRD-based metadata backend
+kube = { version = "0.98", features = ["client", "runtime", "derive", "rustls-tls"], default-features = false }
+k8s-openapi = { version = "0.24", features = ["v1_31"] }
+schemars = "0.8"
+base64 = "0.22"
+
 [workspace.lints.clippy]
 all = { level = "deny", priority = -1 }
 #pedantic = { level = "deny", priority = -1 }
