--- a/examples/p2p_transfer_k8s/deploy/modelexpress-server.yaml
+++ b/examples/p2p_transfer_k8s/deploy/modelexpress-server.yaml
@@ -1,7 +1,12 @@
 # SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 
-# ModelExpress Server deployment with Redis sidecar for P2P transfer coordination
+# ModelExpress Server deployment with Kubernetes CRD backend (default)
+# For Redis backend, use modelexpress-server-redis.yaml instead
+#
+# Prerequisites:
+#   - Apply CRD: kubectl apply -f crd-modelmetadata.yaml
+#   - Apply RBAC: kubectl apply -f rbac-modelmetadata.yaml
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,9 +19,6 @@ spec:
     - port: 8001
       targetPort: 8001
       name: grpc
-    - port: 6379
-      targetPort: 6379
-      name: redis
   selector:
     app: modelexpress-server
 ---
@@ -36,44 +38,23 @@ spec:
       labels:
         app: modelexpress-server
     spec:
-      # Native sidecar: Redis starts first and stays running
-      # Requires Kubernetes >= 1.29 (SidecarContainers feature gate)
-      initContainers:
-        - name: redis
-          image: redis:7-alpine
-          restartPolicy: Always
-          ports:
-            - containerPort: 6379
-          resources:
-            limits:
-              cpu: "1"
-              memory: 4Gi
-            requests:
-              cpu: 500m
-              memory: 2Gi
-          startupProbe:
-            tcpSocket:
-              port: 6379
-            initialDelaySeconds: 1
-            periodSeconds: 1
-            failureThreshold: 30
-          securityContext:
-            allowPrivilegeEscalation: false
-          livenessProbe:
-            tcpSocket:
-              port: 6379
-            periodSeconds: 10
-
+      # ServiceAccount with permissions to manage ModelMetadata CRDs and ConfigMaps
+      serviceAccountName: modelexpress
       containers:
         - name: modelexpress-server
-          image: nvcr.io/nvidian/dynamo-dev/modelexpress-server:server-u64fix-1768535139
-          securityContext:
-            allowPrivilegeEscalation: false
+          image: nvcr.io/nvidian/dynamo-dev/modelexpress-server:k8s-backend
+          imagePullPolicy: Always
           ports:
             - containerPort: 8001
           env:
-            - name: REDIS_URL
-              value: "redis://localhost:6379"
+            # Use Kubernetes CRD backend (no Redis required)
+            - name: MX_METADATA_BACKEND
+              value: "kubernetes"
+            # Namespace for ModelMetadata CRDs (defaults to pod's namespace)
+            - name: MX_METADATA_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           resources:
             requests:
               cpu: 4
