--- a/examples/p2p_transfer_k8s/deploy/vllm-source.yaml
+++ b/examples/p2p_transfer_k8s/deploy/vllm-source.yaml
@@ -2,6 +2,9 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # vLLM Source Instance - loads real model weights and serves them to target via P2P
+# Uses Kubernetes CRD backend for metadata (default)
+# For Redis backend, use vllm-source-redis.yaml instead
+#
 # - vLLM exposes weights via ZMQ (one socket per TP rank)
 # - ModelExpress client handles NIXL transfers and server communication
 apiVersion: v1
@@ -35,32 +38,45 @@ spec:
       labels:
         app: mx-source
     spec:
+      # ServiceAccount with permissions to access ModelMetadata CRDs
+      serviceAccountName: modelexpress
       containers:
         - name: vllm
-          image: nvcr.io/nvidian/dynamo-dev/modelexpress-p2p-client:v0.1.0-baseline
+          image: nvcr.io/nvidian/dynamo-dev/modelexpress-client:k8s-backend
           imagePullPolicy: Always
           # Needed for GPUDirect RDMA to work.
-          # Running as root is required by the vLLM base image for
-          # CUDA driver access and RDMA memory pinning (IPC_LOCK).
           securityContext:
             capabilities:
               add:
                 - IPC_LOCK
           env:
+            - name: VLLM_SERVER_DEV_MODE
+              value: "1"
+            # Increase startup timeout to allow DeepGemm warmup to complete (2 hours)
+            - name: VLLM_RPC_TIMEOUT
+              value: "7200000"
             - name: HF_HUB_CACHE
               value: "/models"
+            - name: MX_ZMQ_ADDRESS
+              value: "ipc:///tmp/mx/vllm.sock"
             - name: MODEL_NAME
               value: "deepseek-ai/DeepSeek-V3"
             # Register ModelExpress custom loaders for FP8 support
             - name: MX_REGISTER_LOADERS
               value: "1"
             # Server address for metadata publishing
-            - name: MODEL_EXPRESS_URL
+            - name: MX_SERVER_ADDRESS
               value: "modelexpress-server:8001"
             # OPTIMIZATION: Synchronized publish - wait for all workers before publishing
             # This reduces the staggered window and allows targets to start simultaneously
             - name: MX_SYNC_PUBLISH
               value: "1"
+            - name: MX_EXPECTED_WORKERS
+              value: "8"
+            # Metadata backend: "kubernetes" (default) or "redis"
+            # Uses native K8s CRDs - no Redis dependency
+            - name: MX_METADATA_BACKEND
+              value: "kubernetes"
             # Baseline: individual tensor registration (stable and tested)
             # Set to "1" for contiguous regions (experimental - see docs/CONTIGUOUS_CONTEXT.md)
             - name: MX_CONTIGUOUS_REG
@@ -69,7 +85,7 @@ spec:
             - name: NIXL_LOG_LEVEL
               value: "INFO"
             - name: UCX_LOG_LEVEL
-              value: "INFO"
+              value: "WARN"
             # UCX transport settings for GPUDirect RDMA
             - name: UCX_TLS
               value: "rc_x,rc,dc_x,dc,cuda_copy"
@@ -98,49 +114,27 @@ spec:
           args:
             - |
               set -ex
-
-              # Background task: wait for vLLM health, run stability check,
-              # then publish NIXL ready flag via MX server gRPC
+              # Background task: wait for health, warmup, then publish NIXL ready signal
               (
                 sleep 5
-                while ! curl -sf http://127.0.0.1:8000/health; do
-                  sleep 5
-                done
-
-                # Grace period for system stabilization
+                while ! curl -sf http://127.0.0.1:8000/health; do sleep 5; done
                 sleep 30
-
-                # Stability check: run a test inference
+                # Warmup inference
                 curl -sf -X POST http://127.0.0.1:8000/v1/completions \
                   -H 'Content-Type: application/json' \
                   -d '{"model":"'"$MODEL_NAME"'","prompt":"1+1=","max_tokens":3}' || true
-
-                # Publish ready flag for all workers via MxClient
-                python3 -c "
-              from modelexpress.client import MxClient
-              import uuid, os
-
-              client = MxClient()
-              session = str(uuid.uuid4())
-              model = os.environ.get('MODEL_NAME', 'unknown')
-              workers = int(os.environ.get('MX_EXPECTED_WORKERS', '8'))
-
+                # Publish ready signal via metadata backend (CRD or Redis)
+                python3 -c '
+              from modelexpress.metadata_client import get_backend
+              import os
+              backend = get_backend()
+              model = os.environ.get("MODEL_NAME", "unknown")
+              workers = int(os.environ.get("MX_EXPECTED_WORKERS", "8"))
               for w in range(workers):
-                  client.publish_ready(
-                      model_name=model,
-                      worker_id=w,
-                      session_id=session,
-                      metadata_hash='na',
-                      nixl_ready=True,
-                      stability_verified=True,
-                  )
-                  print(f'Published ready for worker {w}')
-
-              client.close()
-              "
+                  backend.publish_ready(model, w)
+                  print(f"Published ready for worker {w}")
+              '
               ) &
-
-              # Start vLLM with mx-source loader
               exec python3 -m vllm.entrypoints.openai.api_server \
                 --model $MODEL_NAME \
                 --load-format mx-source \
@@ -168,6 +162,6 @@ spec:
             sizeLimit: 64Gi
         - name: model-cache
           persistentVolumeClaim:
-            claimName: model-cache
+            claimName: deepseek-v3-block
       imagePullSecrets:
         - name: nvcr-imagepullsecret
