--- a/modelexpress_server/Cargo.toml
+++ b/modelexpress_server/Cargo.toml
@@ -38,6 +38,12 @@ tracing-subscriber = { workspace = true }
 redis = { workspace = true }
 uuid = { workspace = true }
 
+# Kubernetes client for CRD-based metadata backend
+kube = { workspace = true }
+k8s-openapi = { workspace = true }
+schemars = { workspace = true }
+base64 = { workspace = true }
+
 [dev-dependencies]
 tempfile = "3.20"
 tokio-test = "0.4"
