refactor: Address PR review feedback from nv-hwoo and AndyDai-nv
- Move CLAUDE.md to project root for better visibility
- Remove unused files: Dockerfile.client, vllm_extension.py, docs/CONTEXT.md
- Remove unused functions in state.rs (remove_metadata, list_models)
- Move MAX_MESSAGE_SIZE constant to constants module in main.rs
- Refactor vllm_loader.py:
  - Use logger instead of print statements
  - Extract address parsing to _parse_server_address() helper
  - Standardize on MODEL_EXPRESS_URL env var with localhost:8001 default
  - Reduce verbose logging
- Remove unused CLI code from client.py (main, generate_zmq_addresses, ZMQ helpers)
- Remove pydantic dependency from pyproject.toml
- Add HF_TOKEN support to model-download.yaml
- Improve vllm-source.yaml readability with multi-line args
- Fix PVC name consistency (model-cache instead of deepseek-v3-block)
- Update env var from MX_SERVER_ADDRESS to MODEL_EXPRESS_URL in K8s manifests

--- a/examples/p2p_transfer_k8s/model-download.yaml
+++ b/examples/p2p_transfer_k8s/model-download.yaml
@@ -57,9 +57,11 @@ spec:
               
               # Download model files (weights, config, tokenizer)
               python3 -c "
+              import os
               from huggingface_hub import snapshot_download
               snapshot_download(
                   '${MODEL_NAME}',
+                  token=os.environ.get('HF_TOKEN'),
               )
               print('Download complete')
               "
