--- a/examples/p2p_transfer_trtllm/trtllm-target.yaml
+++ b/examples/p2p_transfer_trtllm/trtllm-target.yaml
@@ -79,10 +79,11 @@ spec:
             - |
               set -ex
               
-              # Install modelexpress package
+              # Install modelexpress package from the TRT-LLM branch
               echo "Installing modelexpress..."
-              pip install --quiet /opt/modelexpress/modelexpress_client/python/ || \
-                pip install --quiet git+https://github.com/ai-dynamo/modelexpress.git#subdirectory=modelexpress_client/python
+              # Upgrade protobuf first - required for generated pb2 files (gencode 6.x)
+              pip install --quiet --upgrade "protobuf>=6.31"
+              pip install --quiet "git+https://github.com/ai-dynamo/modelexpress.git@kavink/p2p_nixl_transfers_trtllm#subdirectory=modelexpress_client/python"
               
               # Install nixl for RDMA transfers
               pip install --quiet "nixl[cu12]" || echo "NIXL install failed, continuing..."
