--- a/examples/p2p_transfer_trtllm/trtllm-target.yaml
+++ b/examples/p2p_transfer_trtllm/trtllm-target.yaml
@@ -88,21 +88,20 @@ spec:
               # Install nixl for RDMA transfers
               pip install --quiet "nixl[cu12]" || echo "NIXL install failed, continuing..."
               
-              python3 -c "
+              # Write Python script to file to avoid quote escaping issues
+              cat > /tmp/run_target.py << 'PYTHON_SCRIPT'
               import os
               import logging
               
               logging.basicConfig(level=logging.INFO, format='%(asctime)s %(levelname)s: %(message)s')
               logger = logging.getLogger(__name__)
               
-              # Import ModelExpress TRT-LLM loader
               from modelexpress import MxTrtllmTargetLoader
               
               model_name = os.environ.get("MODEL_NAME", "unknown")
               mx_server = os.environ.get("MODEL_EXPRESS_URL", "modelexpress-server:8001")
               output_dir = os.environ.get("OUTPUT_DIR", "/tmp/mx_trtllm")
               
-              # Build configuration from environment
               build_config = {
                   "gemm_plugin": "auto",
                   "max_batch_size": os.environ.get("TRTLLM_MAX_BATCH_SIZE", "8"),
@@ -110,13 +109,11 @@ spec:
                   "max_seq_len": os.environ.get("TRTLLM_MAX_SEQ_LEN", "4096"),
               }
               
-              logger.info('Starting TRT-LLM target loader')
-              logger.info('  Model: %s' % model_name)
-              logger.info('  MX Server: %s' % mx_server)
-              logger.info('  Output: %s' % output_dir)
-              logger.info('  Build config: %s' % build_config)
+              logger.info("Starting TRT-LLM target loader")
+              logger.info(f"  Model: {model_name}")
+              logger.info(f"  MX Server: {mx_server}")
+              logger.info(f"  Output: {output_dir}")
               
-              # Initialize loader
               loader = MxTrtllmTargetLoader(
                   model_name=model_name,
                   mx_server=mx_server,
@@ -124,27 +121,20 @@ spec:
                   build_config=build_config,
               )
               
-              # Receive checkpoint via P2P and build engine
               logger.info("Receiving checkpoint via P2P transfer...")
               engine_dir = loader.load(skip_build=False)
               
               stats = loader.get_transfer_stats()
-              total_gb = stats.get('total_bytes', 0) / 1e9
-              total_time = stats.get('total_time', 0)
-              bandwidth = stats.get('bandwidth_gbps', 0)
-              logger.info('Transfer complete:')
-              logger.info('  Total: %.2f GB' % total_gb)
-              logger.info('  Time: %.2f s' % total_time)
-              logger.info('  Bandwidth: %.1f Gbps' % bandwidth)
-              logger.info('  Engine: %s' % engine_dir)
+              logger.info(f"Transfer complete: {stats.get('total_bytes', 0) / 1e9:.2f} GB")
+              logger.info(f"Engine: {engine_dir}")
+              logger.info("TRT-LLM target ready - checkpoint received")
               
-              logger.info('TRT-LLM target ready - checkpoint received')
-              
-              # Keep running
               import time
               while True:
                   time.sleep(3600)
-              "
+              PYTHON_SCRIPT
+              
+              python3 /tmp/run_target.py
           resources:
             limits:
               nvidia.com/gpu: "1"
