Revert "refactor: Address PR review feedback from nv-hwoo and AndyDai-nv"
This reverts commit 4033d972aa2716d981323ac09238375f67582de4.

--- a/modelexpress_client/python/pyproject.toml
+++ b/modelexpress_client/python/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "nixl[cu12]",
     "numpy>=1.24.0",
     "protobuf>=4.25.0",
+    "pydantic>=2.0.0",
     "pyzmq>=25.0.0",
     "torch>=2.6.0",
 ]
