--- a/examples/p2p_transfer_trtllm/Dockerfile.trtllm
+++ b/examples/p2p_transfer_trtllm/Dockerfile.trtllm
@@ -2,58 +2,20 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # TRT-LLM image with NIXL for P2P weight transfers
-# Base: Triton + TRT-LLM with proper UCX/NIXL from source
+# Uses vLLM base image (which has NIXL/UCX working) and adds TRT-LLM
+#
+# Strategy: Start with vLLM image that has working NIXL, add TRT-LLM runtime
 
-FROM nvcr.io/nvidia/tritonserver:24.12-trtllm-python-py3 AS builder
+FROM vllm/vllm-openai:v0.12.0 AS base
 
-# Install build dependencies for UCX and NIXL
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    cmake \
-    pkg-config \
-    autoconf \
-    automake \
-    libtool \
-    git \
-    libibverbs-dev \
-    librdmacm-dev \
-    libnuma-dev \
-    && rm -rf /var/lib/apt/lists/*
+# Install TRT-LLM dependencies
+RUN pip install --quiet tensorrt-llm
 
-# Install Python build dependencies
-RUN pip install --quiet meson ninja pybind11 tomlkit
+# Install NIXL (should work since vLLM base has compatible UCX)
+RUN pip install --quiet nixl[cu12]
 
-# Build UCX 1.20.x from source with CUDA and verbs support
-WORKDIR /tmp
-RUN git clone --depth 1 --branch v1.20.x https://github.com/openucx/ucx.git && \
-    cd ucx && \
-    ./autogen.sh && \
-    ./contrib/configure-release-mt \
-        --enable-shared \
-        --disable-static \
-        --disable-doxygen-doc \
-        --enable-optimizations \
-        --enable-cma \
-        --enable-devel-headers \
-        --with-cuda=/usr/local/cuda \
-        --with-verbs \
-        --with-dm \
-        --prefix=/usr/local && \
-    make -j$(nproc) && \
-    make install && \
-    ldconfig
-
-# Build NIXL from source
-WORKDIR /tmp
-RUN git clone --depth 1 https://github.com/ai-dynamo/nixl.git && \
-    cd nixl && \
-    pip install tomlkit && \
-    pip install . && \
-    meson setup build -Ducx_path=/usr/local && \
-    ninja -C build && \
-    ninja -C build install && \
-    pip install build/src/bindings/python/nixl-meta/nixl-*-py3-none-any.whl && \
-    ldconfig
+# Verify NIXL works
+RUN python3 -c "import nixl; agent = nixl.nixl_agent('test'); print('NIXL OK')"
 
 # Install Python dependencies for gRPC
 RUN pip install --quiet grpcio grpcio-tools protobuf
